--- a/assets/dev/scss/frontend/_global.scss
+++ b/assets/dev/scss/frontend/_global.scss
@@ -107,6 +107,10 @@
     }
 }
 
+.qazana-heading {
+    margin-bottom: 20px;
+}
+
 .qazana-custom-embed-play {
     position: absolute;
     top: 50%;
