--- a/assets/dev/scss/editor/_templates-modal-wrapper.scss
+++ b/assets/dev/scss/editor/_templates-modal-wrapper.scss
@@ -48,7 +48,7 @@ $library_screen_breakpoint: $editor-screen-lg-max;
             }
             &__icon-wrapper {
                 padding: 4px 7px 6px;
-                background-image: linear-gradient(-135deg, #EF295A, #434363);
+                background-color: #434363;
                 border-radius: 2px;
                 @include margin-end(10px);
             }
