dynamic tags css

--- a/assets/dev/scss/editor/_inline-editor.scss
+++ b/assets/dev/scss/editor/_inline-editor.scss
@@ -12,7 +12,7 @@
 		position: fixed;
 		overflow: hidden;
 		border-radius: 3px;
-		z-index: 9998;
+		z-index: $qazana-modal;
 
 		&:after {
 			top: 100%;
