--- a/assets/dev/scss/common/_dialog.scss
+++ b/assets/dev/scss/common/_dialog.scss
@@ -22,7 +22,7 @@
 	top: 0;
 	left: 0;
 	background-color: rgba(0, 0, 0, 0.8);
-	z-index: 9999;
+	z-index: $qazana-modal;
 	user-select: none;
 
 	.dialog-widget-content {
