--- a/assets/dev/scss/editor/_dynamic-tags.scss
+++ b/assets/dev/scss/editor/_dynamic-tags.scss
@@ -8,7 +8,7 @@
 	background-color: #fff;
 	border: 1px solid $editor-light;
 	border-radius: 3px;
-	z-index: $first-layer;
+	z-index: $editor-layer;
 
 	&__group-title {
 		color: $editor-darkest;
