--- a/assets/dev/scss/editor/_dynamic-tags.scss
+++ b/assets/dev/scss/editor/_dynamic-tags.scss
@@ -75,7 +75,7 @@
 	width: 260px;
 	background-color: $editor-background;
 	box-shadow: 1px 1px 10px rgba(0, 0, 0, .3);
-	z-index: $first-layer;
+	z-index: $editor-layer;
 
 	&:before {
 		$triangle-size: 10px;
