--- a/includes/extensions/counter/assets/css/direction/style-rtl.css
+++ b/includes/extensions/counter/assets/css/direction/style-rtl.css
@@ -1,7 +1,16 @@
 .qazana-counter .qazana-counter-number-wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   color: #222;
   text-align: center;
   font-weight: 600;
@@ -9,11 +18,17 @@
   line-height: 1; }
 
 .qazana-counter .qazana-counter-number-prefix {
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   text-align: right; }
 
 .qazana-counter .qazana-counter-number-suffix {
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   text-align: left; }
 
 .qazana-counter .qazana-counter-title {
@@ -29,5 +44,4 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 1.5; }
-
 /*# sourceMappingURL=style-rtl.css.map */
