--- a/includes/extensions/piechart/assets/css/direction/style-rtl.css
+++ b/includes/extensions/piechart/assets/css/direction/style-rtl.css
@@ -8,9 +8,11 @@
     z-index: 1;
     margin-bottom: 13px;
     max-width: 100%;
-    transform: rotateY(180deg) translateX(50%); }
+    -webkit-transform: rotateY(180deg) translateX(50%);
+            transform: rotateY(180deg) translateX(50%); }
   .qazana-piechart-counterclockwise-yes canvas {
-    transform: rotateY(0) translateX(-50%); }
+    -webkit-transform: rotateY(0) translateX(-50%);
+            transform: rotateY(0) translateX(-50%); }
   .qazana-piechart-title {
     color: #666666;
     text-align: center;
@@ -24,16 +26,31 @@
     font-size: 14px;
     line-height: 1.5; }
   .qazana-piechart-number-progress {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     letter-spacing: -2px;
     font-size: 35px; }
     .qazana-piechart-number-progress-prefix {
-      flex-grow: 1;
+      -webkit-box-flex: 1;
+      -webkit-flex-grow: 1;
+          -ms-flex-positive: 1;
+              flex-grow: 1;
       text-align: right; }
     .qazana-piechart-number-progress-suffix {
-      flex-grow: 1;
+      -webkit-box-flex: 1;
+      -webkit-flex-grow: 1;
+          -ms-flex-positive: 1;
+              flex-grow: 1;
       text-align: left;
       font-size: 70%; }
   .qazana-piechart .piechart-number {
@@ -43,7 +60,8 @@
     margin-bottom: 22px;
     width: 160px;
     height: 160px;
-    border-radius: 50%;
+    -webkit-border-radius: 50%;
+            border-radius: 50%;
     line-height: 160px; }
     .qazana-piechart .piechart-number:before {
       position: absolute;
@@ -52,9 +70,9 @@
       bottom: 0;
       left: 0;
       border: 1px solid grey;
-      border-radius: inherit;
+      -webkit-border-radius: inherit;
+              border-radius: inherit;
       content: ''; }
     .qazana-piechart .piechart-number > * {
       line-height: inherit; }
-
 /*# sourceMappingURL=style-rtl.css.map */
