use system font

--- a/assets/dev/scss/helpers/variables.scss
+++ b/assets/dev/scss/helpers/variables.scss
@@ -76,7 +76,7 @@ $brand-color-dark: #434363;
 
 $editor-orange: #fcb92c;
 
-$editor-font: 'Noto Sans', Helvetica, Arial, Verdana, sans-serif;
+$editor-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 $editor-font-weight: 400;
 
 // WordPress
