--- a/assets/dev/scss/editor/editor-preview.scss
+++ b/assets/dev/scss/editor/editor-preview.scss
@@ -667,6 +667,7 @@ html.qazana-html {
 .qazana-add-section {
 	max-width: 1160px;
 	position: relative;
+	z-index: $editor-layer;
 
 	&:not(.qazana-dragging-on-child) {
 
