--- a/assets/css/templates/frontend.css
+++ b/assets/css/templates/frontend.css
@@ -128,6 +128,34 @@
     height: 37px;
     line-height: 37px; }
 
+.qazana-aspect-ratio-219 .qazana-fit-aspect-ratio {
+  padding-bottom: 42.8571%; }
+
+.qazana-aspect-ratio-169 .qazana-fit-aspect-ratio {
+  padding-bottom: 56.25%; }
+
+.qazana-aspect-ratio-43 .qazana-fit-aspect-ratio {
+  padding-bottom: 75%; }
+
+.qazana-aspect-ratio-32 .qazana-fit-aspect-ratio {
+  padding-bottom: 66.6666%; }
+
+.qazana-aspect-ratio-11 .qazana-fit-aspect-ratio {
+  padding-bottom: 100%; }
+
+.qazana-fit-aspect-ratio {
+  position: relative;
+  height: 0; }
+  .qazana-fit-aspect-ratio iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    border: 0; }
+  .qazana-fit-aspect-ratio video {
+    width: 100%; }
+
 .qazana {
   hyphens: manual; }
   .qazana *, .qazana *:before, .qazana *:after {
@@ -1537,6 +1565,9 @@ body.qazana-page .qazana-widget-menu-anchor {
   .slick-slideshow-large-container-smalls .slick-slide span,
   .slick-slideshow-photo-gallery-container-smalls .slick-slide span {
     display: block; }
+  .slick-slideshow-large-container-smalls .entry-category span,
+  .slick-slideshow-photo-gallery-container-smalls .entry-category span {
+    display: inline-block; }
 
 .qazana-social-icons-wrapper {
   font-size: 0; }
@@ -2205,12 +2236,6 @@ body.qazana-page .qazana-widget-menu-anchor {
 
 .qazana-video-wrapper {
   position: relative; }
-  .qazana-video-wrapper.qazana-aspect-ratio-169 {
-    padding-bottom: 56.25%; }
-  .qazana-video-wrapper.qazana-aspect-ratio-43 {
-    padding-bottom: 75%; }
-  .qazana-video-wrapper.qazana-aspect-ratio-32 {
-    padding-bottom: 66.6666%; }
   .qazana-video-wrapper .qazana-custom-embed-image-overlay {
     position: absolute;
     top: 0;
