--- a/assets/dev/scss/editor/_spacer.scss
+++ b/assets/dev/scss/editor/_spacer.scss
@@ -2,6 +2,9 @@
     background: linear-gradient(135deg,rgba(30,87,153,0) 47%,rgba(30,87,153,0) 48%,rgba(141,210,255,0.53) 49%,rgba(141,210,255,0.53) 51%,rgba(30,87,153,0) 52%,rgba(30,87,153,0) 53%);
     background-size: 6px 6px;
     text-align: center;
+    body.qazana-editor-preview &  {
+        background: transparent;
+    }
 }
 
 span.qazana-space-resize-value {
@@ -15,4 +18,8 @@ span.qazana-space-resize-value {
     align-items: center;
     justify-content: center;
     align-content: center;
+}
+
+body.qazana-editor-preview .qazana-space-resize-value {
+    display: none;
 }
